# ScalerHackthon

./: .gitignore  Dockerfile  README.md  app.py  evaluate_hf.py  evaluate_output.txt  evaluate_results.json  inference.py  instruction.md  openenv.yaml  pyproject.toml  requirements.txt
job_reviewer_env/: __init__.py  env.py  models.py  tasks.py
server/: app.py
